--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-/environment/.data/
-/algorithms/dynamic_programming/.data/
+/rl/environment/.data/
+/rl/algorithms/dynamic_programming/.data/
 /venv/
